--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,35 @@
 body {
     font-family: Arial, Helvetica, sans-serif ;
+    margin: 50px;
+    background-color: lightblue;
+    text-align: center;
+}
+
+#homepage-title {
+    text-align: center;
+    padding: 16px;
+    border: 10px solid rgba(255, 0, 0, 0.616);
+    background-color: lightgreen;
+}
+
+#home-list {
+    background-color: white;
+    border: 2px solid black;
+    padding: 16px 32px;
+    width: 180px;
+    margin: auto;
+}
+
+div {
+    background-color: rgb(255, 255, 255);
+    border: 5px solid rgb(255, 98, 98);
+    padding: 8px 16px;
+}
+
+li {
+    text-align: left;
+}
+
+p {
+    text-align: left;
 }
