--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,40 @@
 body {
-    font-family: Arial, Helvetica, sans-serif ;
+    font-family: 'Arial', sans-serif;
     margin: 50px;
     background-color: lightblue;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #homepage-title {
-    text-align: center;
     padding: 16px;
     border: 10px solid rgba(255, 0, 0, 0.616);
     background-color: lightgreen;
+    margin-bottom: 20px;
 }
 
 #home-list {
+    list-style-type: none;
     background-color: white;
     border: 2px solid black;
     padding: 16px 32px;
     width: 180px;
-    margin: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-div {
-    background-color: rgb(255, 255, 255);
-    border: 5px solid rgb(255, 98, 98);
-    padding: 8px 16px;
+#home-list li {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-li {
-    text-align: left;
+#home-list li a {
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s;
 }
 
-p {
-    text-align: left;
+#home-list li a:hover {
+    color: red;
 }
