--- a/Exercices/flex/1/styles.css
+++ b/Exercices/flex/1/styles.css
@@ -1,3 +1,4 @@
+/* Container styles */
 .container {
     background-color: #ff60aa;
     border: 4px solid #680747;
@@ -8,6 +9,7 @@
     justify-content: center;
 }
 
+/* Box styles */
 .box {
     background-color: #c3195d;
     border: 6px solid #141010;
